<resources>
    <string name="app_name">狱务通监狱版</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="please_input">请输入</string>
    <string name="no_data">暂无数据</string>
    <string name="please_waiting">请稍候...</string>
    <string name="unexpected_errors">服务不可用，请稍后再试</string>
    <string name="user_not_authorized">登录已失效，请重新登录</string>
    <string name="request_timeout_with_try">请求超时，请重试</string>
    <string name="service_not_available">服务不可用，请稍后再试</string>
    <string name="not_available_network_hint">当前网络不可用，请检查网络设置</string>
    <string name="operate_failed">操作失败，请稍后再试</string>
    <string name="login">登录</string>
    <string name="welcome_back">欢迎回来！</string>
    <string name="please_input_user_infor">请输入用户信息</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="app_company_name">国科政信（北京）股份有限公司</string>
    <string name="app_copy_rights">copyright©2006-2015.All right reserved</string>
    <string name="app_v">V </string>
    <string name="login_failed">登录失败，请稍后再试</string>
    <string name="login_exception_retry">登录异常，请稍后再试</string>
    <string name="check_has_not_usb">未检测到U盘</string>
    <string name="meeting_list">会见列表</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="canceled_meeting">已取消会见</string>
    <string name="no_meeting_data">暂无待会见名单</string>
    <string name="video_service_status">启动连接状态：</string>
    <string name="video_service_is_error">连接视频服务器失败，正在重试，请稍后~</string>
    <string name="video_service_connecting">正在连接视频服务器..</string>
    <string name="video_service_connect_success">网络连接成功</string>
    <string name="video_service_connect_failed">网络连接失败</string>
    <string name="video_metting_failed">对方未通过人脸识别或已拒绝</string>
    <string name="video_metting_hangup">对方已挂断</string>
    <string name="the_leave_time">剩余通话时间： </string>
    <string name="has_time_out_colon">已超时： </string>
    <string name="has_called_colon">已通话： </string>
    <string name="id_card_hint">身份审核\n点击缩放</string>
    <string name="open">开启</string>
    <string name="close">关 闭</string>
    <string name="metting_has_time_out">已超时</string>
    <string name="error_to_meetting">拨号失败，请检查终端网络配置</string>
    <string name="remote_interview">远程会见</string>
    <string name="meeting_notice"><![CDATA[注意：\n1. 请确保视频内都是您的亲人，不是请及时告知警察。\n2. 请注意通话不涉及犯罪、国家机密等内容，否则您将失去并可能永久失去远程会见机会。\n3. 请注意时间长短，不要影响后面的狱友使用。\n4. 若您在通话过程中有任何问题，请及时联系警察沟通解决。]]></string>
    <string name="call">呼叫</string>
    <string name="next_call_hint">倒计时</string>
    <string name="query_phone_is_error">查询的家属手机号码不存在</string>
    <string name="query_name_is_error">查询的家属姓名不存在</string>
    <string name="click_for_call">点击呼叫</string>
    <string name="call_free">免费会见</string>
    <string name="usb_setting">USB录屏设置</string>
    <string name="call_free_leave_time_hint">今年剩余免费呼叫次数</string>
    <string name="family_infor">家属信息</string>
    <string name="prison_name">服刑人员姓名</string>
    <string name="prison_number">服刑人员编号</string>
    <string name="prison_relationship">与服刑人员关系</string>
    <string name="family_name_default">家属姓名</string>
    <string name="family_phone_default">手机号码</string>
    <string name="prision_name_default">服刑人员姓名</string>
    <string name="prision_number_default">服刑人员编号 关系</string>
    <string name="time">次</string>
    <string name="leave">剩余</string>
    <string name="alarm_clock_hint_title">前10分钟会见提醒</string>
    <string name="alarm_clock_hint">即将开始会见，请提前做好准备!</string>
    <string name="account_pwd_error">账号或密码错误</string>
    <string name="server_busy">服务器繁忙</string>
    <string name="network_error">网络出错，请检查网络</string>
    <string name="time_out">请求超时，请稍后再试</string>
    <string name="illegal_control">非法操作或没有权限</string>
    <string name="account_disable">您的账号已被禁用</string>
    <string name="kickout">被挤下线</string>
    <string name="yunxin_offline">账号已掉线，正在重新登录中</string>
    <string name="connecting_yunxin">正在重连云信...</string>
    <string name="login_yunxin">正在登录云信...</string>
    <string name="hint">提示</string>
    <string name="minute">分</string>
    <string name="hour">小时</string>
    <string name="second">秒</string>
    <string name="call_time_has_arrived">通话时间已到,是否结束通话?</string>
    <string name="please_set_terminal_infor">请先设置终端信息</string>
    <string name="to_setting">马上设置</string>
    <string name="please_select_cancel_video_reason">请选择挂断本次会见的原因</string>
    <string name="please_select_cancel_meeting_reason">请选择取消本次会见的原因</string>
    <string name="check_other_status">正在连线...</string>
    <string name="other_offline">对方不在线，请稍候再呼叫</string>
    <string name="own_offline">连线失败，请检查终端网络</string>
    <string name="call_back">重新呼叫</string>
    <string name="continue_call">继续呼叫</string>
    <string name="cancel_record">取消录制</string>
    <string name="not_found_tf_card_but_sd_free">未检测到TF卡，本次视频会话将录制到内置SD卡中</string>
    <string name="not_found_tf_card">未检测到TF卡，内置SD卡存储容量不足，本次视频会话将不录制</string>
    <string name="tf_card_not_root_but_sd_free">TF卡无法写入，本次视频会话将录制到内置SD卡中</string>
    <string name="tf_card_not_root">TF卡无法写入，内置SD卡存储容量不足，本次视频会话将不录制</string>
    <string name="tf_card_is_fill">TF卡存储容量不足，录制的视频可能无法写入，确定继续视频会话？</string>
    <string name="update_version_hint">狱务通监狱版更新</string>
    <string name="new_version_colon">新版本：</string>
    <string name="update_content_hint">更新内容：</string>
    <string name="has_last_version">已经是最新版本</string>
    <string name="download">马上更新</string>
    <string name="current_version">当前版本：</string>
    <string name="check_updating">正在检测最新版本...</string>
    <string name="ignore_version">忽略此版本</string>
    <string name="download_failed">下载失败</string>
    <string name="install_failed">安装失败</string>
    <string name="no_call_free_time">免费呼叫次数已用完</string>
    <string name="input_phone">请输入家属手机号码或姓名</string>
    <string name="call_free_hint">免费提供100次/年呼叫家属\n每年1月1日重置次数</string>
    <string name="call_free_hint_defualt_time">剩余100次</string>
    <string name="exit_account_hint">确定退出当前账号？</string>
    <string name="setting">设置</string>
    <string name="end_setting">视频设置</string>
    <string name="logout">退出账号</string>
    <string name="turn_off">关机</string>
    <string name="turn_off_ing">正在关机...</string>
    <string name="turn_off_hint">确定关机？</string>
    <string name="back">返回</string>
    <string name="check_update">版本更新</string>
    <string name="check_network">检测网络</string>
    <string name="start_gui">启用GUI</string>
    <string name="stop_gui">禁用GUI</string>
    <string name="check">检查</string>
    <string name="enable">启用</string>
    <string name="operate_gui_hint">**温馨提示**：需先打开adb，才可使用禁用或启用GUI功能</string>
    <string name="disable">禁用</string>
    <string name="check_network_ing">正在检测网络...</string>
    <string name="start_gui_ing">正在启用GUI...</string>
    <string name="stop_gui_ing">正在禁用GUI...</string>
    <string name="start_gui_success">已启用GUI，请使用遥控器进行切换</string>
    <string name="start_gui_failed">启用GUI失败，请重试</string>
    <string name="stop_gui_failed">禁用GUI失败，请重试</string>
    <string name="stop_gui_success">已禁用GUI，建议重启终端</string>
    <string name="check_network_normal">网络正常</string>
    <string name="check_network_innormal">网络异常，请检查接入网络</string>
    <string name="network_innormal_hang_up">网络异常，请检查接入网络</string>
    <string name="check_network_hint">加载太慢？查查网络</string>
    <string name="start_gui_hint">网络需要配置？启用GUI</string>
    <string name="stop_gui_hint">终端太卡？网络太慢？试试禁用GUI</string>
    <string name="setting_terminal_infor">设置终端信息</string>
    <string name="terminal_account">终端账号</string>
    <string name="terminal_account_hint">请填写会议室号##主持人密码##参与密码，如0000##0000##0000</string>
    <string name="rate">码率</string>
    <string name="rate_colon">码\u0020\u0020率(K)</string>
    <string name="please_input_meeting_numbers">请输入会议室号</string>
    <string name="please_input_host_password">请输入主持人密码</string>
    <string name="please_input_guest_password">请输入参会密码</string>
    <string name="alter_terminal_account_success">修改视频信息成功</string>
    <string name="terminal_account_not_available">此终端可不用，请重新设置</string>
    <string name="GK_register_failed">网络异常，GK注册失败</string>
    <string name="check_failed">验证失败</string>
    <string name="delay_meeting_success">延长会议成功</string>
    <string name="delay_meeting_failed">延长会议失败</string>
    <string name="meetting_number">会议室号\u3000</string>
    <string name="host_password">主持人密码</string>
    <string name="guest_password">参会密码\u3000\u3000</string>
    <string name="connecting">正在连接...</string>
    <string name="wait_answer">等待接听...</string>
    <string name="has_hang_up">已挂断</string>
    <string name="family_no_answer">对方未接听...</string>
    <string name="family_no_answer2">对方未接听</string>
    <string name="call_error">呼叫错误</string>
    <string name="vconf_shortNum">会议号码</string>
    <string name="vconf_time">会议时间</string>
    <string name="vconf_timeLen">会议时长</string>
    <string name="vconf_info_title">会议信息</string>
    <string name="vconf_convene">正在召集</string>
    <string name="vconf_call">正在呼叫</string>
    <string name="vconf_join">正在加入</string>
    <string name="vconf_join_waitingTxt_p2p">请求与您通话</string>
    <string name="vconf_join_waitingTxt_mul">邀请您进入会议</string>
    <string name="vconf_audio_waiting">音频呼叫中</string>
    <string name="vconf_QualityMeetings">视频质量会议</string>
    <string name="vconf_Apply4AdministrativePrivileges">申请管理权限</string>
    <string name="vconf_releaseAdministrativePrivileges">释放管理权限</string>
    <string name="vconf_Apply4Speaker">申请发言</string>
    <string name="vconf_StatisticalInformation">统计信息</string>
    <string name="vconf_ExitConf">退出会议</string>
    <string name="vconf_EndConf">结束会议</string>
    <string name="vconf_flow_remind">电话应答将为您节省流量</string>
    <string name="vconf_chooseJoinWay_3GInfo_mobile">在移动数据网络环境下会影响视音频质量，\n并产生手机流量，可选择电话方式入会</string>
    <string name="vconf_chooseJoinWay_3GInfo_normal">在移动数据网络环境下会影响视音频质量，\n并产生手机流量</string>
    <string name="vconf_tel_response">电话</string>
    <string name="vconf_video_response">视频接听</string>
    <string name="vconf_audio_response">音频接听</string>
    <string name="vconf_answer">接听</string>
    <string name="vconf_2g_unable_tel_join">在当前的网络下您不能进行音视频通话，请使用电话应答入会</string>
    <string name="vconf_canceled">已取消</string>
    <string name="vconf_rejected">已拒绝</string>
    <string name="vconf_noresponse">无人应答</string>
    <string name="vconf_unconnect">未接通</string>
    <string name="vconf_sending_desktop">正在接收双流</string>
    <string name="telephonereceiver_open_info">听筒模式已关</string>
    <string name="telephonereceiver_close_info">听筒模式已开</string>
    <string name="vconf_quit_msg">您确定退出会议吗？</string>
    <string name="vconf_end_msg">您确定结束会议吗？</string>
    <string name="vconf_quit">退出</string>
    <string name="vconf_end">结束</string>
    <string name="hang_up">挂断</string>
    <string name="more_info">更多</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="ok">确定</string>
    <string name="search">搜索</string>
    <string name="definition">清晰度</string>
    <string name="microphone">麦克风</string>
    <string name="speaker">扬声器</string>
    <string name="add_text">添加</string>
    <string-array  name="protocol">
        <item>h323</item>
        <item>sip</item>
    </string-array>
    <string name="config_time">通话时长</string>
    <string name="reminder">提示</string>
    <string-array  name="rate_array">
        <item>128</item>
        <item>512</item>
        <item>768</item>
        <item>1024</item>
        
        
        
    </string-array>
</resources>