<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/common_white_item_click_selector"
    android:onClick="onClickListener"
    android:id="@+id/call_free_layout_rl_item"
    android:padding="@dimen/margin"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/call_free_layout_iv_portrait"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:src="@mipmap/portrait"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_toRightOf="@+id/call_free_layout_iv_portrait"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:minEms="5"
        android:layout_alignTop="@+id/call_free_layout_iv_portrait"
        android:id="@+id/call_free_layout_tv_family_name"
        android:textColor="@color/common_blue"
        android:text="@string/family_name_default"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:textSize="18sp"
        android:id="@+id/call_free_layout_tv_phone"
        android:layout_below="@+id/call_free_layout_tv_family_name"
        android:layout_alignLeft="@+id/call_free_layout_tv_family_name"
        android:textColor="@color/common_gray_title_color"
        android:text="@string/family_phone_default"
        />

    <View
        android:id="@+id/call_free_layout_v_center"
        android:layout_marginTop="10dip"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/call_free_layout_tv_family_name"
        android:layout_alignBottom="@+id/call_free_layout_tv_phone"
        android:layout_width="0.5dip"
        android:background="@color/common_line_color"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_alignTop="@+id/call_free_layout_tv_family_name"
        />
    <TextView
        android:id="@+id/call_free_layout_tv_prision_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/call_free_layout_tv_family_name"
        android:layout_toRightOf="@+id/call_free_layout_v_center"
        android:textColor="@color/common_text_color"
        android:layout_marginRight="20dip"
        android:text="@string/prision_name_default"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/call_free_layout_tv_prision_number"
        android:layout_width="wrap_content"
        android:layout_below="@+id/call_free_layout_tv_prision_name"
        android:layout_alignLeft="@+id/call_free_layout_tv_prision_name"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:textSize="20sp"
        android:textColor="@color/common_gray_title_color"
        android:text="@string/prision_number_default"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:visibility="visible"
        android:id="@+id/call_free_layout_tv_click_call"
        android:textColor="@color/common_blue"
        android:text="@string/click_for_call"
        />
</RelativeLayout>