<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/cus_dialog_shape"
    android:gravity="center"
    android:paddingTop="@dimen/margin"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingBottom="@dimen/margin_half"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/update_dialog_layoutt_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_version_hint"
        android:textColor="@color/common_text_color"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/update_dialog_layoutt_tv_new_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_version_colon"
        android:textColor="@color/common_blue"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/update_dialog_layout_tv_update_content_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:visibility="gone"
        android:text="@string/update_content_hint"
        android:textColor="@color/common_light_text_color"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/update_dialog_layout_tv_update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:visibility="gone"
        android:textColor="@color/common_light_text_color"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/update_dialog_layout_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dip"
        android:layout_below="@+id/update_dialog_layoutt_tv_app_name"
        android:layout_marginTop="15dip"
        android:layout_toLeftOf="@+id/update_dialog_layoutt_tv_down_load_progress"
        android:max="100"
        android:progress="0"
        android:visibility="gone" />

    <TextView
        android:id="@+id/update_dialog_layout_tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="1"
        android:background="@drawable/common_item_click_selector"
        android:gravity="right"
        android:text="0MB/0MB"
        android:textColor="@color/common_blue"
        android:textSize="22sp"
        android:visibility="gone" />

    <View
        android:id="@+id/update_dialog_layout_v_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="@dimen/margin_half"
        android:background="@color/common_line_color" />

    <LinearLayout
        android:id="@+id/update_dialog_layout_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/update_dialog_layout_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_item_click_selector"
            android:gravity="center"
            android:text="@string/ignore_version"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:textColor="@color/common_gray_title_color"
            android:textSize="30sp" />

        <View
            android:id="@+id/update_dialog_layout_v_mid"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/common_line_color" />

        <TextView
            android:id="@+id/update_dialog_layout_tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:background="@drawable/common_item_click_selector"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="@color/common_blue"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>
